fix: Long text two lines + truncate (#3451)
* intial commit

* changes 1

---------

--- a/src/app/shared/components/expenses-card-v2/expenses-card.component.scss
+++ b/src/app/shared/components/expenses-card-v2/expenses-card.component.scss
@@ -194,10 +194,11 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 1.3;
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 8;
+    -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 70%;
     padding-right: 4px;
   }
 
